--- a/index.html
+++ b/index.html
@@ -65,27 +65,23 @@
 ====================================================== -->
 <section id="games" class="section">
 
-  <!-- SECTION HEADER -->
   <div class="section-head">
     <h2>Our Games</h2>
     <p class="muted">All titles are currently under production.</p>
   </div>
 
   <!-- =========================
-       GAME CARDS (STEAM STYLE)
+       GAME GRID
   ========================== -->
   <div class="game-grid">
 
     <!-- GAME CARD A -->
     <article class="game-card" data-game="game-a">
-      <!-- 🔽 MAIN BANNER IMAGE -->
       <img src="images/gallery/gallery1.jpg" alt="Project A key art">
-
-      <!-- 🔽 HOVER OVERLAY -->
       <div class="game-overlay">
         <h3>Project A</h3>
         <p>In Development</p>
-        <span class="pill">View Media & Info</span>
+        <span class="pill">View Game Info</span>
       </div>
     </article>
 
@@ -95,86 +91,33 @@
       <div class="game-overlay">
         <h3>Project B</h3>
         <p>In Development</p>
-        <span class="pill">View Media & Info</span>
+        <span class="pill">View Game Info</span>
       </div>
     </article>
 
   </div>
 
   <!-- =========================
-       EXPANDABLE GAME CONTENT
+       GAME INFO PANEL
   ========================== -->
   <div class="game-info-container">
 
-    <!-- =====================
-         PROJECT A CONTENT
-    ====================== -->
-    <div id="game-a" class="game-info hidden">
-
+    <div id="game-a" class="game-info">
       <h3>Project A</h3>
-
-      <!-- 🔽 IMAGE "TRAILER" / GALLERY -->
-      <div class="media-strip">
-        <!-- 👉 Replace images here -->
-        <img src="images/gallery/gallery1.jpg" alt="Project A screenshot 1">
-        <img src="images/gallery/gallery2.jpg" alt="Project A screenshot 2">
-        <img src="images/gallery/gallery1.jpg" alt="Project A screenshot 3">
-      </div>
-
-      <!-- 🔽 EDITABLE GAME INFO -->
-      <p><strong>Introduction</strong><br>
-      A narrative-driven adventure set in a fractured world where memory
-      and identity blur.</p>
-
-      <p><strong>Synopsis</strong><br>
-      Players follow a lone traveler uncovering forgotten truths buried
-      beneath collapsing civilizations.</p>
-
-      <p><strong>Genre</strong><br>
-      Narrative Adventure / Exploration</p>
-
-      <p><strong>Game Style</strong><br>
-      Third-person, story-focused, atmospheric gameplay.</p>
-
-      <p><strong>Characters</strong><br>
-      The Wanderer, The Archivist, The Echoes.</p>
-
+      <p><strong>Introduction</strong><br>A narrative-driven adventure set in a fractured world.</p>
+      <p><strong>Genre</strong><br>Narrative Adventure</p>
     </div>
 
-    <!-- =====================
-         PROJECT B CONTENT
-    ====================== -->
-    <div id="game-b" class="game-info hidden">
-
+    <div id="game-b" class="game-info">
       <h3>Project B</h3>
-
-      <div class="media-strip">
-        <img src="images/gallery/gallery1.jpg" alt="Project B screenshot 1">
-        <img src="images/gallery/gallery2.jpg" alt="Project B screenshot 2">
-      </div>
-
-      <p><strong>Introduction</strong><br>
-      A stylized action RPG built around elemental combat and
-      choice-driven progression.</p>
-
-      <p><strong>Synopsis</strong><br>
-      Kingdoms clash as players shape alliances and rewrite the fate
-      of a dying realm.</p>
-
-      <p><strong>Genre</strong><br>
-      Action RPG</p>
-
-      <p><strong>Game Style</strong><br>
-      Fast-paced combat with narrative branching.</p>
-
-      <p><strong>Characters</strong><br>
-      The Vanguard, The Seer, The Ash King.</p>
-
+      <p><strong>Introduction</strong><br>A stylized action RPG focused on elemental combat.</p>
+      <p><strong>Genre</strong><br>Action RPG</p>
     </div>
 
   </div>
 
 </section>
+
 
 
     <!-- ======================================================
