--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
   <main>
 
 <!-- ======================================================
-  GAMES — IMAGE TRAILER + EXPANDABLE INFO
+  GAMES — EXPANDABLE INFO PANEL (STABLE VERSION)
 ====================================================== -->
-<section id="games" class="section">
+<section id="games" class="section games-section">
 
   <div class="section-head">
     <h2>Our Games</h2>
@@ -71,11 +71,11 @@
   </div>
 
   <!-- =========================
-       GAME GRID
+       GAME GRID (BASE LAYOUT)
   ========================== -->
   <div class="game-grid">
 
-    <!-- GAME CARD A -->
+    <!-- ========= PROJECT A ========= -->
     <article class="game-card" data-game="game-a">
       <img src="images/gallery/gallery1.jpg" alt="Project A key art">
       <div class="game-overlay">
@@ -85,7 +85,7 @@
       </div>
     </article>
 
-    <!-- GAME CARD B -->
+    <!-- ========= PROJECT B ========= -->
     <article class="game-card" data-game="game-b">
       <img src="images/gallery/gallery1.jpg" alt="Project B key art">
       <div class="game-overlay">
@@ -95,29 +95,53 @@
       </div>
     </article>
 
+    <!-- 🔽 ADD MORE PROJECTS HERE (COPY ABOVE BLOCK) -->
+
   </div>
 
   <!-- =========================
-       GAME INFO PANEL
+       FADE-DOWN GAME INFO PANEL
   ========================== -->
   <div class="game-info-container">
 
+    <!-- ===== PROJECT A INFO ===== -->
     <div id="game-a" class="game-info">
       <h3>Project A</h3>
-      <p><strong>Introduction</strong><br>A narrative-driven adventure set in a fractured world.</p>
-      <p><strong>Genre</strong><br>Narrative Adventure</p>
+
+      <p><strong>Introduction</strong><br>
+        A narrative-driven adventure set in a fractured world.</p>
+
+      <p><strong>Synopsis</strong><br>
+        Players uncover forgotten histories beneath collapsing civilizations.</p>
+
+      <p><strong>Genre</strong><br>
+        Narrative Adventure</p>
+
+      <p><strong>Game Style</strong><br>
+        Third-person, atmospheric, story-focused.</p>
     </div>
 
+    <!-- ===== PROJECT B INFO ===== -->
     <div id="game-b" class="game-info">
       <h3>Project B</h3>
-      <p><strong>Introduction</strong><br>A stylized action RPG focused on elemental combat.</p>
-      <p><strong>Genre</strong><br>Action RPG</p>
+
+      <p><strong>Introduction</strong><br>
+        A stylized action RPG centered on elemental combat.</p>
+
+      <p><strong>Synopsis</strong><br>
+        Shape alliances and rewrite the fate of a dying realm.</p>
+
+      <p><strong>Genre</strong><br>
+        Action RPG</p>
+
+      <p><strong>Game Style</strong><br>
+        Fast-paced combat with branching narratives.</p>
     </div>
 
+    <!-- 🔽 ADD MORE GAME INFO BLOCKS MATCHING data-game -->
+
   </div>
-
 </section>
-
 
 
     <!-- ======================================================
