--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </section>
 
     <!-- ======================================================
-      MEDIA (SINGLE IMAGE ONLY — per your request)
+      MEDIA (SINGLE IMAGE ONLY)
     ====================================================== -->
     <section id="media" class="section reveal">
       <div class="section-head">
@@ -187,7 +187,13 @@
         <p>Development has officially begun.</p>
       </article>
     </section>
-
+    
+  <article class="glass devlog">
+        <h3>Devlog #1</h3>
+        <p class="muted">January 10, 2026</p>
+        <p>Art is Underway.</p>
+      </article>
+    </section>
     <!-- ======================================================
       MERCH
     ====================================================== -->
@@ -198,10 +204,10 @@
       </div>
 
       <div class="merch-row">
-        <div class="merch-card glass">Item 1</div>
-        <div class="merch-card glass">Item 2</div>
-        <div class="merch-card glass">Item 3</div>
-        <div class="merch-card glass">Item 4</div>
+        <div class="merch-card glass">Stickers</div>
+        <div class="merch-card glass">Paints</div>
+        <div class="merch-card glass">Shirts</div>
+        <div class="merch-card glass">Jackets and Hoodies</div>
       </div>
     </section>
 
@@ -246,7 +252,7 @@
         </article>
 
         <article class="team-card" aria-label="Kevin N.">
-          <img src="images/team/kevin.jpg" alt="Kevin portrait" />
+          <img src="images/gallery/gallery1.jpg" alt="Kevin portrait" />
           <h4>Kevin N.</h4>
           <p class="muted">Lead Technical Designer &amp; Full-Stack Developer</p>
 
