--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
 
       <article class="glass devlog">
         <h3>Devlog #1</h3>
-        <p class="muted">January 2026</p>
-        <p>Development has officially begun.</p>
+        <p class="muted">February 2025</p>
+        <p>Development of Candle Letters has officially begun.</p>
       </article>
     </section>
     
@@ -229,7 +229,7 @@
       <div class="team-grid">
 
         <article class="team-card" aria-label="Luvelre N.">
-          <img src="images/team/luvelre.jpg" alt="Luvelre portrait" />
+          <img src="images/gallery/gallery1.jpg" alt="Luvelre portrait" />
           <h4>Luvelre N.</h4>
           <p class="muted">Narrative Designer &amp; Lead Scriptwriter</p>
 
@@ -241,7 +241,7 @@
         </article>
 
         <article class="team-card" aria-label="Milo G.">
-          <img src="images/team/milo.jpg" alt="Milo portrait" />
+          <img src="images/gallery/gallery1.jpg" alt="Milo portrait" />
           <h4>Milo G.</h4>
           <p class="muted">Lead Visual Artist &amp; Animation Director</p>
 
@@ -263,7 +263,7 @@
         </article>
 
         <article class="team-card" aria-label="KonneAqua">
-          <img src="images/team/konneaqua.jpg" alt="KonneAqua portrait" />
+          <img src="images/gallery/gallery1.jpg" alt="KonneAqua portrait" />
           <h4>KonneAqua</h4>
           <p class="muted">Audio Director &amp; Lead Composer</p>
 
