--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <!-- ======================================================
-  KMCEI Productions — FINAL WORKING HTML
-  - Smooth anchor scroll (NO section swapping)
-  - Steam-style game cards + trailer modal
-  - Bottom branding band (maroon) + team cards
-  - Light/Dark toggle + fade-in micro animations
+  KMCEI Productions —
+  - Smooth scroll
+  - HII MILOOO
+  - IT MAROON AND BLACK BTWW, EVERYYTHINGS LABELED
+  - Light/Dark toggle TOP RIGHT
 ====================================================== -->
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>KMCEI Productions</title>
+  <!-- Favicon -->
+<link rel="icon" href="favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png">
+
+
   <link rel="stylesheet" href="style.css" />
 </head>
 
