--- a/index.html
+++ b/index.html
@@ -215,8 +215,9 @@
 
   </main>
 
-  <!-- ======================================================
-    BOTTOM BRANDING BAND
+   <!-- ======================================================
+    BOTTOM BRANDING BAND (MAROON LIKE YOUR PHOTO 3)
+    Contains: KMCEI Productions + "Etching..." + Team Cards
   ====================================================== -->
   <section id="bottom" class="bottom-band">
     <div class="bottom-inner reveal">
@@ -233,6 +234,8 @@
           <img src="images/gallery/gallery1.jpg" alt="Luvelre portrait" />
           <h4>Luvelre N.</h4>
           <p class="muted">Narrative Designer &amp; Lead Scriptwriter</p>
+
+          <!-- Social icons appear on hover -->
           <div class="team-socials" aria-label="Luvelre socials">
             <a href="#" title="X / Twitter" aria-label="X">𝕏</a>
             <a href="#" title="Portfolio" aria-label="Portfolio">⌁</a>
@@ -243,6 +246,7 @@
           <img src="images/gallery/gallery1.jpg" alt="Milo portrait" />
           <h4>Milo G.</h4>
           <p class="muted">Lead Visual Artist &amp; Animation Director</p>
+
           <div class="team-socials" aria-label="Milo socials">
             <a href="#" title="Instagram" aria-label="Instagram">⌁</a>
             <a href="#" title="Art portfolio" aria-label="Art">✦</a>
@@ -253,6 +257,7 @@
           <img src="images/gallery/gallery1.jpg" alt="Kevin portrait" />
           <h4>Kevin N.</h4>
           <p class="muted">Lead Technical Designer &amp; Full-Stack Developer</p>
+
           <div class="team-socials" aria-label="Kevin socials">
             <a href="#" title="GitHub" aria-label="GitHub">⟠</a>
             <a href="#" title="LinkedIn" aria-label="LinkedIn">in</a>
@@ -263,6 +268,7 @@
           <img src="images/gallery/gallery1.jpg" alt="KonneAqua portrait" />
           <h4>KonneAqua</h4>
           <p class="muted">Audio Director &amp; Lead Composer</p>
+
           <div class="team-socials" aria-label="KonneAqua socials">
             <a href="#" title="YouTube" aria-label="YouTube">▶</a>
             <a href="#" title="SoundCloud" aria-label="SoundCloud">☁</a>
@@ -272,6 +278,7 @@
       </div>
     </div>
   </section>
+
 
   <!-- ======================================================
     FOOTER
