--- a/index.html
+++ b/index.html
@@ -279,6 +279,32 @@
     </div>
   </section>
 
+<!-- ======================================================
+  ADS / PARTNERS SECTION
+====================================================== -->
+<section id="ads" class="ads-band">
+  <div class="ads-inner">
+
+    <p class="ads-label">Supported by</p>
+
+    <div class="ads-row">
+      <!-- AD / PARTNER ITEM -->
+      <a href="#" class="ad-card" aria-label="Partner Studio">
+        <span class="ad-name">Partner Studio</span>
+      </a>
+
+      <!-- ADD MORE IF NEEDED -->
+      <a href="#" class="ad-card" aria-label="Coming Soon">
+        <span class="ad-name">More Partners Soon</span>
+      </a>
+    </div>
+
+    <p class="ads-note muted">
+      Playable demos and store pages are currently in development.
+    </p>
+
+  </div>
+</section>
 
   <!-- ======================================================
     FOOTER
