--- a/index.html
+++ b/index.html
@@ -219,90 +219,65 @@
     BOTTOM BRANDING BAND (MAROON LIKE YOUR PHOTO 3)
     Contains: KMCEI Productions + "Etching..." + Team Cards
   ====================================================== -->
-  <section id="bottom" class="bottom-band">
-    <div class="bottom-inner reveal">
-      <div class="bottom-branding">
-        <h2 class="bottom-title">KMCEI Productions</h2>
-        <p class="bottom-line">Etching our hearts and minds into the digital ether.</p>
-      </div>
+<section id="bottom" class="bottom-band">
+  <div class="bottom-inner reveal">
 
-      <h3 class="bottom-subhead">Core Team</h3>
-
-      <div class="team-grid">
-
-        <article class="team-card" aria-label="Luvelre N.">
-          <img src="images/gallery/gallery1.jpg" alt="Luvelre portrait" />
-          <h4>Luvelre N.</h4>
-          <p class="muted">Narrative Designer &amp; Lead Scriptwriter</p>
-
-          <!-- Social icons appear on hover -->
-          <div class="team-socials" aria-label="Luvelre socials">
-            <a href="#" title="X / Twitter" aria-label="X">𝕏</a>
-            <a href="#" title="Portfolio" aria-label="Portfolio">⌁</a>
-          </div>
-        </article>
-
-        <article class="team-card" aria-label="Milo G.">
-          <img src="images/gallery/gallery1.jpg" alt="Milo portrait" />
-          <h4>Milo G.</h4>
-          <p class="muted">Lead Visual Artist &amp; Animation Director</p>
-
-          <div class="team-socials" aria-label="Milo socials">
-            <a href="#" title="Instagram" aria-label="Instagram">⌁</a>
-            <a href="#" title="Art portfolio" aria-label="Art">✦</a>
-          </div>
-        </article>
-
-        <article class="team-card" aria-label="Kevin N.">
-          <img src="images/gallery/gallery1.jpg" alt="Kevin portrait" />
-          <h4>Kevin N.</h4>
-          <p class="muted">Lead Technical Designer &amp; Full-Stack Developer</p>
-
-          <div class="team-socials" aria-label="Kevin socials">
-            <a href="#" title="GitHub" aria-label="GitHub">⟠</a>
-            <a href="#" title="LinkedIn" aria-label="LinkedIn">in</a>
-          </div>
-        </article>
-
-        <article class="team-card" aria-label="KonneAqua">
-          <img src="images/gallery/gallery1.jpg" alt="KonneAqua portrait" />
-          <h4>KonneAqua</h4>
-          <p class="muted">Audio Director &amp; Lead Composer</p>
-
-          <div class="team-socials" aria-label="KonneAqua socials">
-            <a href="#" title="YouTube" aria-label="YouTube">▶</a>
-            <a href="#" title="SoundCloud" aria-label="SoundCloud">☁</a>
-          </div>
-        </article>
-
-      </div>
-    </div>
-  </section>
-
-<!-- ======================================================
-  ADS / PARTNERS SECTION
-====================================================== -->
-<section id="ads" class="ads-band">
-  <div class="ads-inner">
-
-    <p class="ads-label">Supported by</p>
-
-    <div class="ads-row">
-      <!-- AD / PARTNER ITEM -->
-      <a href="#" class="ad-card" aria-label="Partner Studio">
-        <span class="ad-name">Partner Studio</span>
-      </a>
-
-      <!-- ADD MORE IF NEEDED -->
-      <a href="#" class="ad-card" aria-label="Coming Soon">
-        <span class="ad-name">More Partners Soon</span>
-      </a>
+    <!-- ===== TEAM BANNER TITLE ===== -->
+    <div class="team-banner-title">
+      <span class="bg-word">PRODUCTIONS</span>
+      <h2 class="fg-word">KMCEI</h2>
+      <p class="bottom-line">Etching our hearts and minds into the digital ether.</p>
     </div>
 
-    <p class="ads-note muted">
-      Playable demos and store pages are currently in development.
-    </p>
+    <!-- ===== TEAM GRID ===== -->
+    <div class="team-showcase">
 
+      <!-- MEMBER -->
+      <article class="team-profile">
+        <img src="images/gallery/gallery1.jpg" alt="Luvelre N. portrait">
+        <h4>Luvelre N.</h4>
+        <p>Narrative Designer & Lead Scriptwriter</p>
+
+        <div class="team-links">
+          <a href="#">X</a>
+          <a href="#">Portfolio</a>
+        </div>
+      </article>
+
+      <article class="team-profile">
+        <img src="images/gallery/gallery1.jpg" alt="Milo G. portrait">
+        <h4>Milo G.</h4>
+        <p>Lead Visual Artist & Animation Director</p>
+
+        <div class="team-links">
+          <a href="#">Instagram</a>
+          <a href="#">Art</a>
+        </div>
+      </article>
+
+      <article class="team-profile">
+        <img src="images/gallery/gallery1.jpg" alt="Kevin N. portrait">
+        <h4>Kevin N.</h4>
+        <p>Lead Technical Designer & Full-Stack Developer</p>
+
+        <div class="team-links">
+          <a href="#">GitHub</a>
+          <a href="#">LinkedIn</a>
+        </div>
+      </article>
+
+      <article class="team-profile">
+        <img src="images/gallery/gallery1.jpg" alt="KonneAqua portrait">
+        <h4>KonneAqua</h4>
+        <p>Audio Director & Lead Composer</p>
+
+        <div class="team-links">
+          <a href="#">YouTube</a>
+          <a href="#">SoundCloud</a>
+        </div>
+      </article>
+
+    </div>
   </div>
 </section>
 
