--- a/index.html
+++ b/index.html
@@ -280,6 +280,47 @@
     </div>
   </div>
 </section>
+<!-- ======================================================
+  PARTNER / AD BANNER (LIGHTWEIGHT FADE CONVEYOR)
+  - Add / remove ads freely
+  - One ad fades into the next
+====================================================== -->
+<section class="ad-banner">
+
+  <div class="ad-inner">
+
+    <p class="ad-label">Partners & Collaborators</p>
+
+    <!-- =========================
+         AD SLIDES (COPY TO ADD MORE)
+    ========================== -->
+    <div class="ad-track">
+
+      <!-- AD ITEM 1 -->
+      <div class="ad-slide active">
+        <img src="images/ads/ad1.png" alt="Partner Studio 1">
+      </div>
+
+      <!-- AD ITEM 2 -->
+      <div class="ad-slide">
+        <img src="images/ads/ad2.png" alt="Partner Studio 2">
+      </div>
+
+      <!-- AD ITEM 3 -->
+      <div class="ad-slide">
+        <img src="images/ads/ad3.png" alt="Partner Studio 3">
+      </div>
+
+      <!-- 🔽 COPY THIS BLOCK TO ADD MORE ADS -->
+      <!--
+      <div class="ad-slide">
+        <img src="images/ads/ad4.png" alt="Partner Studio 4">
+      </div>
+      -->
+
+    </div>
+  </div>
+</section>
 
   <!-- ======================================================
     FOOTER
