--- a/index.html
+++ b/index.html
@@ -222,12 +222,18 @@
 <section id="bottom" class="bottom-band">
   <div class="bottom-inner reveal">
 
-    <!-- ===== TEAM BANNER TITLE ===== -->
-    <div class="team-banner-title">
-      <span class="bg-word">PRODUCTIONS</span>
-      <h2 class="fg-word">KMCEI</h2>
-      <p class="bottom-line">Etching our hearts and minds into the digital ether.</p>
-    </div>
+<!-- =========================
+     PRODUCTION TITLE STACK
+========================= -->
+<div class="production-title">
+  <span class="production-bg">PRODUCTIONS</span>
+  <h2 class="production-fg">KMCEI</h2>
+</div>
+
+<p class="production-tagline">
+  Etching our hearts and minds into the digital ether.
+</p>
+
 
     <!-- ===== TEAM GRID ===== -->
     <div class="team-showcase">
