--- a/index.html
+++ b/index.html
@@ -304,17 +304,17 @@
 
       <!-- AD ITEM 1 -->
       <div class="ad-slide active">
-        <img src="images/ads/ad1.png" alt="Partner Studio 1">
+        <img src="images/gallery/gallery1.jpeg" alt="Partner Studio 1">
       </div>
 
       <!-- AD ITEM 2 -->
       <div class="ad-slide">
-        <img src="images/ads/ad2.png" alt="Partner Studio 2">
+        <img src="images/gallery/gallery1.jpeg" alt="Partner Studio 2">
       </div>
 
       <!-- AD ITEM 3 -->
       <div class="ad-slide">
-        <img src="images/ads/ad3.png" alt="Partner Studio 3">
+        <img src="images/gallery/gallery1.jpeg" alt="Partner Studio 3">
       </div>
 
       <!-- 🔽 COPY THIS BLOCK TO ADD MORE ADS -->
